--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/booking
-spring.datasource.username=user
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=pass
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.show-sql: true
+spring.main.allow-circular-references=true
